--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,13 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y cmake g++ make
+      run: sudo apt-get update && sudo apt-get install -y cmake g++
+
+    - name: Configure project
+      run: cmake -S . -B build
 
     - name: Build project
-      run: |
-        g++ -std=c++17 -I. main.cpp tests.cpp -o tests
+      run: cmake --build build
+
     - name: Run tests
-      run: ./tests
+      run: ctest --test-dir build
