--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y cmake g++
+    #- name: Install dependencies
+    #  run: sudo apt-get update && sudo apt-get install -y cmake g++
 
     - name: Configure project
       run: cmake -S . -B build
