--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,11 +17,11 @@ jobs:
     #- name: Install dependencies
     #  run: sudo apt-get update && sudo apt-get install -y cmake g++
 
-    - name: Configure project
-      run: cmake -S . -B build
+   # - name: Configure project
+    #  run: cmake -S . -B build
 
-    - name: Build project
-      run: cmake --build build
+   # - name: Build project
+    #  run: cmake --build build
 
     - name: Run tests
       run: ctest --test-dir build
