--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
    # - name: Configure project
     #  run: cmake -S . -B build
 
-   # - name: Build project
-    #  run: cmake --build build
+    - name: Build project
+      run: cmake --build build
 
    # - name: Run tests
     #  run: ctest --test-dir build
