--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    #- name: Install dependencies
-    #  run: sudo apt-get update && sudo apt-get install -y cmake g++
+    - name: Install dependencies
+      run: sudo apt-get update && sudo apt-get install -y cmake g++
 
-   # - name: Configure project
-    #  run: cmake -S . -B build
+    - name: Configure project
+      run: cmake -S . -B build
 
     - name: Build project
       run: cmake --build build
 
-   # - name: Run tests
-    #  run: ctest --test-dir build
+    # - name: Run tests
+    #   run: ctest --test-dir build
