--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
     - name: Build project
       run: cmake --build build
 
-    # - name: Run tests
-    #   run: ctest --test-dir build
+    - name: Run tests
+      run: ctest --test-dir build
