--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,10 +22,9 @@ add_executable(studentsDataBase main.cpp student.cpp)
 # Тесты
 add_executable(tests tests.cpp student.cpp)
 target_link_libraries(tests gtest_main)
+target_include_directories(studentsDataBase PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories(tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 # РЕГИСТРИРУЕМ ТЕСТЫ ДЛЯ CTEST
 enable_testing()
 add_test(NAME StudentDatabaseTests COMMAND tests)
-
-
